--- a/pom.xml
+++ b/pom.xml
@@ -14,5 +14,72 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+
+    <!--use logback.xml及桥接log4j、log4j2-->
+<!--    <dependency>-->
+<!--      <groupId>ch.qos.logback</groupId>-->
+<!--      <artifactId>logback-classic</artifactId>-->
+<!--      <version>1.2.3</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-to-slf4j</artifactId>-->
+<!--      <version>2.17.0</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.slf4j</groupId>-->
+<!--      <artifactId>log4j-over-slf4j</artifactId>-->
+<!--      <version>1.7.25</version>-->
+<!--    </dependency>-->
+
+    <!--use log4j2.xml 及桥接log4j-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-slf4j-impl</artifactId>-->
+<!--      <version>2.17.0</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-core</artifactId>-->
+<!--      <version>2.17.0</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.slf4j</groupId>-->
+<!--      <artifactId>log4j-over-slf4j</artifactId>-->
+<!--      <version>1.7.25</version>-->
+<!--    </dependency>-->
+
+    <!--use log4j.properties 桥接log4j2（不推荐）-->
+<!--    <dependency>-->
+<!--      <groupId>org.slf4j</groupId>-->
+<!--      <artifactId>slf4j-log4j12</artifactId>-->
+<!--      <version>1.7.25</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.apache.logging.log4j</groupId>-->
+<!--      <artifactId>log4j-to-slf4j</artifactId>-->
+<!--      <version>2.17.0</version>-->
+<!--    </dependency>-->
+
+
+    <!--log4j 平滑升级到 log4j2-->
+    <!--生效配置与pom顺序有关: slf4j-log4j12在log4j-1.2-api前，log4j生效；
+    slf4j-log4j12在log4j-1.2-api后，log4j2生效-->
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-1.2-api</artifactId>
+      <version>2.17.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.17.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.25</version>
+    </dependency>
+
   </dependencies>
 </project>
